--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "jms/payment-core-bundle": "dev-master",
-        "stripe/stripe-php": "dev-master"
+        "jms/payment-core-bundle": "^1.3.0",
+        "stripe/stripe-php": "^5.1.2"
     },
     "require-dev": {
         "symfony/browser-kit": "*",
